feat: migrate to Ollama embedding model and add RAG chat API